feat(tmux-config): added keymaps for vi-move, copying to clipboard

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -12,6 +12,17 @@ bind-key h select-pane -L
 bind-key j select-pane -D
 bind-key k select-pane -U
 bind-key l select-pane -R
+bind -n M-h  previous-window
+bind -n M-l next-window
+
+# clipboard
+if-shell "uname | grep -q Darwin" {
+  bind-key -T copy-mode-vi 'y' send -X copy-pipe-and-cancel 'reattach-to-user-namespace pbcopy'
+  bind-key -T copy-mode-vi Enter send -X copy-pipe-and-cancel 'reattach-to-user-namespace pbcopy'
+} {
+  bind-key -T copy-mode-vi 'y' send -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
+  bind-key -T copy-mode-vi Enter send -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
+}
 
 # plugins
 set -g @plugin 'christoomey/vim-tmux-navigator'
