--- a/.tmux.conf
+++ b/.tmux.conf
@@ -5,6 +5,13 @@ set -s default-terminal 'tmux-256color'
 
 set -g prefix C-a
 set -g status-position bottom
+set-option -g mouse on
+
+# pane navigation
+bind -r H resize-pane -L 2
+bind -r J resize-pane -D 2
+bind -r K resize-pane -U 2
+bind -r L resize-pane -R 2
 
 # like vim
 setw -g mode-keys vi
