--- a/.tmux.conf
+++ b/.tmux.conf
@@ -32,47 +32,20 @@ if-shell "uname | grep -q Darwin" {
 }
 
 # plugins
+set -g @plugin 'catppuccin/tmux'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'o0th/tmux-nova'
-
-# colors
-b_bg="#d41243"
-
-seg_a="#05ffa1 #282828" # green
-# seg_a="#ffde5c #282828" # yellow
-
-seg_b="$b_bg #ddc7a1"
-
-inactive_bg="#32302f"
-inactive_fg="#ddc7a1"
-active_bg=$b_bg
-active_fg="#ddc7a1"
-
-set -gw window-status-current-style bold
-set -g "@nova-status-style-bg" "$inactive_bg"
-set -g "@nova-status-style-fg" "$inactive_fg"
-set -g "@nova-status-style-active-bg" "$active_bg"
-set -g "@nova-status-style-active-fg" "$active_fg"
-
-set -g "@nova-pane-active-border-style" "#44475a"
-set -g "@nova-pane-border-style" "#827d51"
 
 # theme settings
-set -g @nova-pane "[#W]"
-set -g @nova-rows 0
+set -g @catppuccin_flavour 'mocha'
 
-set -g @nova-segment-prefix "#{?client_prefix,PREFIX,}"
-set -g @nova-segment-prefix-colors "$seg_b"
+set -g @catppuccin_pill_theme_enabled off
+set -g @catppuccin_no_patched_fonts_theme_enabled on
+set -g @catppuccin_window_tabs_enabled on
 
-set -g @nova-segment-session "#{session_name}"
-set -g @nova-segment-session-colors "$seg_a"
+set -g @catppuccin_host "off"
+set -g @catppuccin_user "off"
 
-set -g @nova-segment-whoami "#(whoami)@#h"
-set -g @nova-segment-whoami-colors "$seg_a"
-
-set -g @nova-segments-0-left "session"
-set -g @nova-segments-0-right "prefix whoami"
 
 # initialize tmux
 run '~/.tmux/plugins/tpm/tpm'
