--- a/.tmux.conf
+++ b/.tmux.conf
@@ -12,6 +12,7 @@ bind -r H resize-pane -L 2
 bind -r J resize-pane -D 2
 bind -r K resize-pane -U 2
 bind -r L resize-pane -R 2
+bind q killp
 
 # like vim
 setw -g mode-keys vi
