fix(alacritty): changed keymap for hiding alacritty to avoid problems with tmux

--- a/.config/alacritty/bindings.toml
+++ b/.config/alacritty/bindings.toml
@@ -2,7 +2,7 @@
 [[keyboard.bindings]]
 action = "Minimize" # Hide the Alacritty window
 key = "H"
-mods = "Alt"
+mods = "Control|Alt"
 
 [[keyboard.bindings]]
 action = "CreateNewWindow"
