--- a/.config/tmux/settings/_status.conf
+++ b/.config/tmux/settings/_status.conf
@@ -1,3 +1,7 @@
 set -g status-bg black
 set -g status-fg white
+
 set -g status-position bottom
+
+set-option -g automatic-rename on
+set-option -g status-interval 1
