--- a/.config/tmux/settings/_status.conf
+++ b/.config/tmux/settings/_status.conf
@@ -5,3 +5,5 @@ set -g status-position bottom
 
 set-option -g automatic-rename on
 set-option -g status-interval 1
+
+set -g window-status-current-style 'fg=black,bg=red,bold'
