fix(tmux): changed configuration

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -16,12 +16,12 @@ source-file $TMUX_DIR_CONFIG/settings/_clipboard.conf
 
 # plugins
 set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-cpu'
+# set -g @plugin 'tmux-plugins/tmux-cpu'
 set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
 
 # import plugins files
-source-file $TMUX_DIR_CONFIG/plugins/_cpu.conf
+# source-file $TMUX_DIR_CONFIG/plugins/_cpu.conf
 source-file $TMUX_DIR_CONFIG/plugins/_prefix_highlight.conf
 
 # initialize tmux
-run ~/.tmux/plugins/tpm/tpm
+run ~/.config/tmux/plugins/tpm/tpm
