--- a/.config/tmux/settings/pane_navigation.conf
+++ b/.config/tmux/settings/pane_navigation.conf
@@ -2,4 +2,6 @@ bind -r H resize-pane -L 2
 bind -r J resize-pane -D 2
 bind -r K resize-pane -U 2
 bind -r L resize-pane -R 2
+bind -r - split-window -v
+bind -r + split-window -h
 bind q killp
